; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/heimdal/lib/asn1/extr_check-gen.c_check_seq.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/heimdal/lib/asn1/extr_check-gen.c_check_seq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i32* }

@.str = private unnamed_addr constant [15 x i8] c"failed adding\0A\00", align 1
@.str.1 = private unnamed_addr constant [17 x i8] c"failed removing\0A\00", align 1
@.str.2 = private unnamed_addr constant [27 x i8] c"can remove from empty list\00", align 1
@.str.3 = private unnamed_addr constant [15 x i8] c"seq not empty!\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @check_seq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @check_seq() #0 {
  %1 = alloca i32, align 4
  %2 = alloca %struct.TYPE_5__, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %2, i32 0, i32 1
  store i32* null, i32** %5, align 8
  %6 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %2, i32 0, i32 0
  store i32 0, i32* %6, align 8
  %7 = call i32 @add_TESTSeqOf(%struct.TYPE_5__* %2, i32* %3)
  store i32 %7, i32* %4, align 4
  %8 = load i32, i32* %4, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %12

10:                                               ; preds = %0
  %11 = call i32 @printf(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0))
  br label %71

12:                                               ; preds = %0
  %13 = call i32 @add_TESTSeqOf(%struct.TYPE_5__* %2, i32* %3)
  store i32 %13, i32* %4, align 4
  %14 = load i32, i32* %4, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %12
  %17 = call i32 @printf(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0))
  br label %71

18:                                               ; preds = %12
  %19 = call i32 @add_TESTSeqOf(%struct.TYPE_5__* %2, i32* %3)
  store i32 %19, i32* %4, align 4
  %20 = load i32, i32* %4, align 4
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %24

22:                                               ; preds = %18
  %23 = call i32 @printf(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0))
  br label %71

24:                                               ; preds = %18
  %25 = call i32 @add_TESTSeqOf(%struct.TYPE_5__* %2, i32* %3)
  store i32 %25, i32* %4, align 4
  %26 = load i32, i32* %4, align 4
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %28, label %30

28:                                               ; preds = %24
  %29 = call i32 @printf(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0))
  br label %71

30:                                               ; preds = %24
  %31 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %2, i32 0, i32 0
  %32 = load i32, i32* %31, align 8
  %33 = sub nsw i32 %32, 1
  %34 = call i32 @remove_TESTSeqOf(%struct.TYPE_5__* %2, i32 %33)
  store i32 %34, i32* %4, align 4
  %35 = load i32, i32* %4, align 4
  %36 = icmp ne i32 %35, 0
  br i1 %36, label %37, label %39

37:                                               ; preds = %30
  %38 = call i32 @printf(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.1, i64 0, i64 0))
  br label %71

39:                                               ; preds = %30
  %40 = call i32 @remove_TESTSeqOf(%struct.TYPE_5__* %2, i32 2)
  store i32 %40, i32* %4, align 4
  %41 = load i32, i32* %4, align 4
  %42 = icmp ne i32 %41, 0
  br i1 %42, label %43, label %45

43:                                               ; preds = %39
  %44 = call i32 @printf(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.1, i64 0, i64 0))
  br label %71

45:                                               ; preds = %39
  %46 = call i32 @remove_TESTSeqOf(%struct.TYPE_5__* %2, i32 0)
  store i32 %46, i32* %4, align 4
  %47 = load i32, i32* %4, align 4
  %48 = icmp ne i32 %47, 0
  br i1 %48, label %49, label %51

49:                                               ; preds = %45
  %50 = call i32 @printf(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.1, i64 0, i64 0))
  br label %71

51:                                               ; preds = %45
  %52 = call i32 @remove_TESTSeqOf(%struct.TYPE_5__* %2, i32 0)
  store i32 %52, i32* %4, align 4
  %53 = load i32, i32* %4, align 4
  %54 = icmp ne i32 %53, 0
  br i1 %54, label %55, label %57

55:                                               ; preds = %51
  %56 = call i32 @printf(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.1, i64 0, i64 0))
  br label %71

57:                                               ; preds = %51
  %58 = call i32 @remove_TESTSeqOf(%struct.TYPE_5__* %2, i32 0)
  store i32 %58, i32* %4, align 4
  %59 = load i32, i32* %4, align 4
  %60 = icmp eq i32 %59, 0
  br i1 %60, label %61, label %63

61:                                               ; preds = %57
  %62 = call i32 @printf(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.2, i64 0, i64 0))
  store i32 1, i32* %1, align 4
  br label %73

63:                                               ; preds = %57
  %64 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %2, i32 0, i32 0
  %65 = load i32, i32* %64, align 8
  %66 = icmp ne i32 %65, 0
  br i1 %66, label %67, label %69

67:                                               ; preds = %63
  %68 = call i32 @printf(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.3, i64 0, i64 0))
  store i32 1, i32* %1, align 4
  br label %73

69:                                               ; preds = %63
  %70 = call i32 @free_TESTSeqOf(%struct.TYPE_5__* %2)
  store i32 0, i32* %4, align 4
  br label %71

71:                                               ; preds = %69, %55, %49, %43, %37, %28, %22, %16, %10
  %72 = load i32, i32* %4, align 4
  store i32 %72, i32* %1, align 4
  br label %73

73:                                               ; preds = %71, %67, %61
  %74 = load i32, i32* %1, align 4
  ret i32 %74
}

declare dso_local i32 @add_TESTSeqOf(%struct.TYPE_5__*, i32*) #1

declare dso_local i32 @printf(i8*) #1

declare dso_local i32 @remove_TESTSeqOf(%struct.TYPE_5__*, i32) #1

declare dso_local i32 @free_TESTSeqOf(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
